--- a/src/components/Intro/intro.scss
+++ b/src/components/Intro/intro.scss
@@ -1,5 +1,88 @@
+@import "../../global.scss";
+
 .intro {
 
-    background-color:magenta;
+    background-color: #FFF;
+    display: flex;
+    overflow: hidden;
+
+        .left {
+
+            flex: 0.5;
+
+            .wrapper {
+
+                width: 100%;
+                height: 100%;
+                padding: 0 2rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+
+                h1 {
+
+                    font-size: 30px;
+                    padding: 1rem 1rem;
+                    color: $primary-blue;
+                }
+
+                span {
+
+                    color: $secondary-teal;
+                    font-size: 50px;
+                }
+            }
+
+            a {
+
+                position: absolute;
+                bottom: 50px;
+                left: 50%;
+
+                img {
+
+                    width: 35px;
+                    height: auto;
+                    animation: bounceIn 1s infinite;
+
+                }
+
+                @keyframes bounceIn {
+                    0% {
+                      transform: scale(0.1);
+                      opacity: 0;
+                    }
+                    60% {
+                      transform: scale(1.2);
+                      opacity: 1;
+                    }
+                    100% {
+                      transform: scale(1);
+                    }
+                  }
+
+            }
+
+        }
+
+        .right {
+
+            flex: 0.5;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .imgContainer {
+
+                width: 700px;
+                height: 700px;
+            }
+            
+            img {
+
+                height: 100%;
+            }
+        }
 
 }
