--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,5 +1,86 @@
+@import "../../global.scss";
+
+
 .portfolio {
 
-    background-color: darkgreen;
+    background-color: #FFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1{
+
+        font-size: 50px;
+
+    } 
+    
+    ul {
+
+        margin: 10px;
+        padding: 0px;
+        list-style: none;
+        display: flex;
+    }
+
+
+    .container {
+
+        width: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+
+        .item {
+
+            width: 300px;
+            border-radius: 20px;
+            border: 5px solid rgb(240, 239, 239);
+            margin: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: $primary-blue;
+            position: relative;
+            transition: all 0.5s ease;
+            cursor: pointer;
+            
+
+            h3 {
+
+                position: absolute;
+                font-size: 20px;
+                color: #FFF;
+
+            }
+
+            img {
+            
+                width: 100%;
+                height: 215px;
+                object-fit: cover;
+                border: 2px solid lightgray;
+                border-radius: 20px;
+                z-index: 1;
+            }
+            &:hover {
+
+                background-color: $primary-blue;
+
+                img {
+
+                    opacity: 0.3;
+                    z-index: 0;
+                    border: 2px solid lightgray;
+                    border-radius: 20px;
+
+                }
+
+            }
+        }
+
+
+    }
 
 }
