--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -19,12 +19,9 @@
         align-items: center;
         justify-content: space-between;
 
-        .nav-logo a{
+        .nav-logo img{
 
-            text-decoration: none;
-            font-size: 40px;
-            font-weight: 700;
-            color: inherit;
+            width: 30%;
             
         }
 
