--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -34,17 +34,36 @@
     li {
 
         margin: 25px;
+        overflow: hidden;
 
         a {
 
             font-size: inherit;
             color: inherit;
             text-decoration: none;
+
+           
         }
 
         &:hover {
 
             font-weight: 600;
+        }
+        
+        .social-links {
+
+            padding: 0.3rem 0.3rem;
+            
+            
+            img {
+
+                width: 25px;
+                padding: 0.2rem 0.2rem;
+                border: 3px double #fff;
+                background-color: $secondary-teal;
+
+            }
+
         }
 
     }
