--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,5 +1,103 @@
+@import "../../global.scss";
+
 .contact {
 
-    background-color: lightblue;
+    background-color: $neutral-white;
+
+    display: flex;
+    .left {
+
+        flex: 1;
+        overflow: hidden;
+
+        img{
+
+            width: 100%;
+        }
+
+    }
+
+    .right {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+
+        h2 {
+
+            font-size: 30px;
+
+        }
+
+        form {
+
+            width: 70%;
+            height: 70%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
+            .form-inputs {
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+
+                    width: 24px;
+                    height: 24px;
+                    padding: 0.4rem;
+                    background-color: $primary-blue;
+                    border: double 4px $neutral-white;
+
+                }
+
+            }
+
+            input {
+
+                width: 300px;
+                height: 30px;
+                font-size: 14px;
+                margin: 0.3rem;
+
+            }
+
+            textarea {
+
+                width: 300px;
+                height: 200px;
+                font-size: 14px;
+                margin: 0.3rem;
+
+            }
+
+            button {
+
+                width: 150px;
+                height: 30px;
+                color: $neutral-white;
+                background-color: $primary-blue;
+                border: none;
+                border-radius: 5px;
+                font-weight: 700;
+                cursor: pointer;
+                filter: drop-shadow(3px 3px 4px rgb(97, 97, 97));
+
+                
+            &:hover {
+
+                background-color: $secondary-teal;
+                border: none;
+
+                }
+
+            }
+        }
+    }
 
 }
