--- a/src/global.scss
+++ b/src/global.scss
@@ -3,3 +3,15 @@ $secondary-teal: #44b59b;
 
 $neutral-white: #FFF;
 $neutral-grey: #0a0909;
+
+$width: 768px;
+
+@mixin mobile {
+
+    @media (max-width: #{$width}){
+
+
+        @content 
+    }
+
+}
