--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -9,6 +9,13 @@
         border-radius: 10px;
         cursor: pointer;
 
+        @include mobile {
+
+            margin-right: 15px;
+            
+
+        }
+
         &.active {
 
             background-color: $secondary-teal;
