--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -3,8 +3,15 @@
 .contact {
 
     background-color: $neutral-white;
-
     display: flex;
+
+                
+    @include mobile {
+
+       flex-direction: column;
+    }
+        
+
     .left {
 
         flex: 1;
@@ -25,6 +32,7 @@
         justify-content: center;
 
 
+
         h2 {
 
             font-size: 30px;
@@ -40,11 +48,14 @@
             align-items: center;
             justify-content: space-around;
 
+
+
             .form-inputs {
 
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
 
                 img {
 
@@ -53,6 +64,15 @@
                     padding: 0.4rem;
                     background-color: $primary-blue;
                     border: double 4px $neutral-white;
+
+        
+                    @include mobile {
+
+                        width: 20px;
+                        height: 20px;
+                        padding: 0.2rem;
+                     }
+
 
                 }
 
@@ -65,6 +85,14 @@
                 font-size: 14px;
                 margin: 0.3rem;
 
+                @include mobile {
+
+                    width: 175px;
+                    height: 20px;
+                    font-size: 12px;
+                    
+                }
+
             }
 
             textarea {
@@ -73,6 +101,14 @@
                 height: 200px;
                 font-size: 14px;
                 margin: 0.3rem;
+
+                @include mobile {
+
+                    width: 175px;
+                    height: 50px;
+                    font-size: 12px;
+                    
+                }
 
             }
 
@@ -88,7 +124,14 @@
                 cursor: pointer;
                 filter: drop-shadow(3px 3px 4px rgb(97, 97, 97));
 
-                
+                @include mobile {
+
+                    width: 65%;
+                    height: 30px;
+                    font-size: 14px;
+                    
+                }
+
             &:hover {
 
                 background-color: $secondary-teal;
