--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -16,6 +16,13 @@
         font-size: 40px;
         color: $neutral-white;
 
+        @include mobile {
+
+            top: 10px;
+            font-size: 25px;
+
+        }
+
     }
 
     .arrow {
@@ -23,6 +30,13 @@
         height: 50px;
         position: absolute;
         cursor: pointer;
+
+        @include mobile {
+
+            display: none;
+
+            
+        }
 
         &.left {
 
@@ -45,6 +59,13 @@
         left: 0;
         transition: all 1s ease-in-out;
 
+        @include mobile {
+
+            height: 100vh;
+            flex-direction: column;
+            justify-content: center;
+            
+        }
 
         .container {
 
@@ -63,9 +84,24 @@
                 align-items: center;
                 justify-content: center;
 
+                @include mobile {
+
+                    width: 80%;
+                    height: 150px;
+                    margin: 20px 0;
+        
+                    
+                }
+
                 .left {
 
                     flex: 4;
+
+                    @include mobile {
+
+                        flex: 6;
+            
+                    }
 
                     .leftContainer {
 
@@ -76,10 +112,25 @@
                         flex-direction: column;
                         justify-content: space-between;
                         text-align: center;
+
+                        @include mobile {
+
+                            width: 100%;
+                            height: 100%;
+                
+                        }
                     
                     h3 {
 
                         font-size: 20px;
+
+                        @include mobile {
+
+                            font-size: 16px;
+                            padding: 0.1rem;
+                
+                            
+                        }
                         
                     }
                     
@@ -89,11 +140,23 @@
                         font-weight: bold;
                         color: $secondary-teal;
 
+                        @include mobile {
+
+                            display: none;
+                            
+                        }
+
                     }
                     
                     p {
 
                         font-size: 14px;
+
+                        @include mobile {
+
+                            display: none;          
+                            
+                        }
                     }
 
                 }
@@ -108,11 +171,44 @@
                     justify-content: center;
                     overflow: hidden;
 
+                    @include mobile {
+                        
+                        flex: 6;
+            
+                        
+                    }
+
+                    .imgContainer {
+
+                        width: 40px;
+                        height: 40px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                        @include mobile {
+
+                            width: 20px;
+                            height: 20px;
+                 
+                             
+                         }
+
                     img {
 
                         width: 500px;
 
+                        @include mobile {
+
+                           width: 100%;
+                           height: 100%;
+                
+                            
+                        }
+
                     }
+
+                }
 
                 }
             }
