--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -100,8 +100,12 @@
                     @include mobile {
 
                         flex: 6;
-            
-                    }
+                        padding: 0.2rem
+
+                     }
+
+
+
 
                     .leftContainer {
 
@@ -127,7 +131,7 @@
                         @include mobile {
 
                             font-size: 16px;
-                            padding: 0.1rem;
+                            padding: 0.4rem 0.5rem;
                 
                             
                         }
@@ -172,31 +176,30 @@
                     overflow: hidden;
 
                     @include mobile {
-                        
+
                         flex: 6;
-            
-                        
-                    }
+
+                     }
 
                     .imgContainer {
 
-                        width: 40px;
-                        height: 40px;
+                        width: 500px;
+                        height: 500px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
 
                         @include mobile {
 
-                            width: 20px;
-                            height: 20px;
+                            width: 100%;
+                            height: 100%;
                  
                              
                          }
 
                     img {
 
-                        width: 500px;
+                        width: 100%;
 
                         @include mobile {
 
